# clew

./: .dockerignore  .env.sample  CONTEXT.md  Dockerfile  README.md  app.py  app_oauth.py  entrypoint.sh  manifest.json  pyproject.toml  requirements.txt  webapi.py
.claude/: CLAUDE.md
.slack/: config.json
agent/: __init__.py  agent.py  channel_context.py  context.py  deps.py  org_context.py  profile_draft.py
agent/tools/: __init__.py  citations.py  emoji_reaction.py  grant_sources.py  org_profile_tool.py  qualify.py  tasks.py  website.py  workspace_search.py
docs/: devpost-description.md  devpost.md  draft-application-reuse-engine.md  judge-start-here.md  video-script-final.md  video-script.md  vo-final.txt
listeners/: __init__.py  briefing.py  grant_channel.py
listeners/actions/: __init__.py  draft_application_action.py  feedback_buttons.py  find_grants_action.py  org_profile_actions.py  origin.py  prospect_actions.py  reset_action.py  saved_grants_action.py  task_actions.py
listeners/events/: __init__.py  app_home_opened.py  app_mentioned.py  message.py  tool_status.py
listeners/views/: __init__.py  agent_message.py  app_home_builder.py  board_builder.py  grant_brief_builder.py  home_refresh.py  lifecycle_builders.py  (+8 more)
scripts/: run_clew.sh
storage/: __init__.py  db.py
tests/: browser-test-2026-07-12.md  conftest.py  test_app_home_opened.py  test_briefing.py  test_citations.py  test_draft_application.py  test_org_profile_form.py  test_storage.py  test_tasks.py  test_view_builders.py
thread_context/: __init__.py  store.py
web/: package-lock.json
(+4 files in other folders)
