[project]
name = "clew"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "slack-sdk==3.43.0",
    "slack-bolt==1.29.0",
    "slack-cli-hooks==0.3.0",
    "claude-agent-sdk==0.2.114",
    "aiohttp==3.14.1",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
test = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
]
dev = [
    "bolt-python-support-agent-claude[test]",
    "ruff==0.15.20",
]

[tool.setuptools.packages.find]
include = ["agent*", "listeners*", "thread_context*"]

[tool.ruff]
[tool.ruff.lint]
[tool.ruff.format]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_file = "logs/pytest.log"
log_file_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
